--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
 	height: 100vh;
 }
 
+.main-title { color: #d7d7d7 !important; }
+.button.is-text { color: #d7d7d7 !important; }
+.button.is-text:hover { color: #363636 !important; }
+
 .modal-text {
 	background-color: white;
 	border-radius: 4px;
